--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -505,8 +505,17 @@ programs using propositional logic.
 There has been many different approaches to verify ladder logic using different tools and techniques. In the following we shall first present several approaches developed at the home research group of the author and secondly look at work from other institutions and organisations. 
 
 
-The Swansea University Railway Verification Group has produced 3 successful MRes These and 2 successful PhD These on this topic each with their own particular focus. The original group work on the project was carried out by Kanso (See \cite{KKanso}), as part of an MRes project,   who invented an approach to translate ladder logic into propositional logic to which he then used inductive verification with a SAT solver \cite{GSPaper}. This approach was applied to a small academic example pelicon crossing and a real world railway interlocking program consisting of approximately 500 rungs. The work done by Kanso was extended by James in another MRes project that applied program slicing to reduce the size of the model checking problem and bounded model checking and temporal induction to verify the interlockings and possibly obtain a counter example in the process. These two MRes projects were themselves inspired by far earlier work in the form of a feasibility study by Fokkink and Hollingshead \cite{WF98}.
+The Swansea University Railway Verification Group has produced 3 successful MRes These and 2 successful PhD These on this topic each with their own particular focus. The original group work on the project was carried out by Kanso (See \cite{KK08}), as part of an MRes project,  who invented an approach to translate ladder logic into propositional logic to which he then used inductive verification with a SAT solver \cite{GSPaper}. This approach was applied to a small academic example pelicon crossing and a real world railway interlocking program consisting of approximately 500 rungs. The work done by Kanso was extended by James in another MRes project \cite{PJ10} that applied program slicing to reduce the size of the model checking problem and bounded model checking and temporal induction to verify the interlockings and possibly obtain a counter example in the process. James also verified another interlocking of a similar size to the original one but with a different layout. The author verified 100 safety conditions over a solid state interlocking and modelled the railway in a modular fashion using the  \scade \, suite in the scope of his MRes thesis. A summary of the work peformed in these three these can be found in \cite{fmbokpaper}. These three MRes projects were themselves inspired by far earlier work in the form of a feasibility study by Fokkink and Hollingshead \cite{WF98}. Fokkink laid much of the logical foundation by connecting ladder logic with propositional logic and formulated a method for presenting such a ladder logic program as a propositional formulae.
 
+Kanso also produced a PhD thesis \cite{KarimPhD} which described various approaches to use the interactive theorem prover Agda as a verification platform for train control systems. This thesis also describe a unique way of combining interactive and automatic theorem provers in a lazy fashion such that a proof object was constructed in agda for the automatic proof as well as the interactive proof \cite{KarimPaper}. Lemmas were proven that showed high level safety properties such as "two trains do not crash" can be proven from low level properties that refer to  signalling principles. These high level lemmas were proven once interactively and hold for all track plans. Using these high level lemmas, automatic theorem provers could then prove safety for a given railway by automatically verifying a set of safety properties refering to signalling principles.
+
+James in his thesis went on to work on domain specific languages for railway verification and delivered a platform which could verify graphical track plans from the railway domain automatically  \cite{PhilPhD}.
+
+The Safecap project was a joint collaboration between researchers at Swansea and Newcastle University to look into modelling capacity and its relationship with safety on the railway \cite{YI12}. It resulted in a new specification formalism CSP$\parallel$B being used to model a double junction \cite{FM12}. This is complicated from a verification point of view as there are many different possibilities for train movements but it was never the less verified using the ProB tool. This project also resulted in an approach to verify segments of railways in a modular fashion i.e. the verification of a segment of track is implied by verification of its constituent components \cite{FM12b}.
+
+
+
+\begin{comment}
 
 Previously James carried out work for Invensys, applying various SAT and model
 checking techniques to verify the correctness of a simple pelican crossing and
@@ -548,3 +557,5 @@ are discussed below.
   by up to a factor of 10.
 
 \end{description}
+
+\end{comment}
