--- a/Main.tex
+++ b/Main.tex
@@ -55,6 +55,10 @@
 \usepackage{xspace}
 \usepackage{bussproofs}
 \usepackage{multirow}
+\usepackage{framed}
+\usepackage{listings}
+\lstset{numbers = left , stepnumber = 1 ,  framexleftmargin=30pt, frame = single}
+
 
 
 \newcommand{\mybar}{\mbox{\Large \textbar}}
@@ -83,7 +87,7 @@
 \usetikzlibrary{shapes.callouts}
 %%\usetikzlibrary{arrows,backgrounds,snakes,shapes}
 
-
+\renewcommand{\lstlistingname}{Code Listing}
 
 
 \newcommand{\rungStart}{
